cabal-version:       >=1.10
name:                hc14t7
version:             0.1.0.0
build-type:          Simple

-- Library component
library
  exposed-modules:     Lib
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

-- Executable component
executable hc14t7-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.7 && <5,
                       hc14t7
  default-language:    Haskell2010
